syntax = "proto3";
package valclient;

message Request {
  string client_id = 1;
}

message Response {
  string client_id = 1;
  string password = 2;
  int32 type = 3;
  string expiry = 4;v
  string permission = 5;
}

service Valclient {
  rpc ElaborDetail (Request) returns (Response);
}